# simhub

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  buildspec.yml  circle.yml  premake4.lua  test.cpp
config/: config.cfg
docs/: TODO.md  attributes.md  configuration.md  dataElements.md  logging.md  simDataElements.md  styleGuide.md  tofix.md
lib/pokey/: CMakeLists.txt  Makefile.noqmake  Makefile.noqmake.osx  Pins  PoKeysLib.h  PoKeysLib.pro  PoKeysLib1Wire.c  PoKeysLibCore.c  PoKeysLibCore.h  PoKeysLibCoreSockets.c  PoKeysLibCoreSockets.h  PoKeysLibDeviceData.c  PoKeysLibEncoders.c  PoKeysLibFastUSB.c  PoKeysLibI2C.c  PoKeysLibIO.c  PoKeysLibLCD.c  PoKeysLibMatrixKB.c  PoKeysLibMatrixLED.c  PoKeysLibPoIL.c  PoKeysLibPoNET.c  PoKeysLibPulseEngine.c  PoKeysLibPulseEngine_v2.c  PoKeysLibSPI.c  PoKeysLib_global.h  ReadMe.txt  hid-libusb.c
lib/pokey/include/: PoKeysLib.h
logs/: log
src/: .clang-format  main.cpp
src/CSource/: CSource.cpp  CSource.h
src/app/: appsupport.h  main.cpp  simhub.cpp  simhub.h
src/common/aws/: aws.cpp  aws.h
src/common/configmanager/: configmanager.cpp  (+1 more)
src/configManager/: CConfigManager.cpp  CConfigManager.h
src/libs/: commandLine.h
src/log/: CLog.cpp  CLog.h
src/test/: test_logging.h  test_main.cpp
tools/prosim-emulator/: app.js  client.js  package.json  server.js
tools/sim-emulator/: .app.js.swp  README.md  app.js
tools/simTrainer/: client.js  collect.js  commands.json  dynamoClient.js  flightData_test.csv  forever.json  injectWeather.js  kinesisClient.js  package.json
tools/simUI/: index.html  package.json
(+110 files in other folders)
